Fix broken alignment for category in post meta
I'm sure there's a better way to fix this, ideally wrapping the "Filed Under" text in its own tag, but this seemed like a quick fix.

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
 	color: #999595;
 	font-size: 12px;
 	vertical-align: top;
+	display: flex;
 }
 .post-preview .filed ul{
 	float: none;
